# AyED3-TPS

./: .gitignore  README.md
TP1/: CMakeLists.txt  TP1  main.cpp
TP1/Ej1/: Makefile  ejec  execute.sh  main  main.cpp
TP1/Ej1/tests/: execute.sh  main  test3.txt
TP1/Ej2/: Makefile  generadorAleatorios.cpp  main  main.cpp  test.txt
TP1/Ej2/Bottom-Up/: main  main.cpp
TP1/Ej2/Top-Down/: Makefile  main  main.cpp  test.txt
TP1/Ej2/Top-Down/util/: modex.cpp
TP1/Ej2/util/: gen
TP1/Ej3/: Makefile  main  main.cpp  runtime.csv
TP1/Ej3/Experimentacion/: Experimentacion.ipynb  ejec  runtime.csv  tester.cpp
TP1/Ej3/Experimentacion/inputs/: test1.txt  test3.txt
TP1/Ej3/Experimentos/: grafico.py  test  tester.cpp
TP1/Ej3/Experimentos/.ipynb_checkpoints/: Experimentacion-checkpoint.ipynb
TP1/Ej3/Experimentos/inputs/: generar_ordenado.py  generar_random.py  test2.txt
TP1/Ej3/Experimentos/runtimes/: desordenados.csv  ordenados.csv
TP1/ejercicios/: ej1.cpp
TP1/tests/: CuadradoMagicoTEST.cpp
TP2/Ej1/: Makefile  main.cpp
TP2/Ej1/tests/: test2.txt  test3.txt
TP2/Ej2/: main.cpp
TP2/Ej2/tests/: test1.txt  test2.txt  test3.txt
TP2/Ej3/: main.cpp
TP2/Ej3/Experimentos/: denso  grafico.py  runtime_denso.csv  runtime_denso_1_modem.csv  runtime_denso_random_w.csv  runtime_ralo.csv  runtime_ralo_1_modem.csv  runtime_ralo_random_w.csv  testDenso.cpp
TP2/Ej3/Ralos/: Makefile
TP2/Ej3/experimentacion/: denso  densos.cpp  grafico.py  ralo  runtime_dense.csv  runtime_ralo.csv  testDenso.cpp  testRalo.cpp  tester.cpp
TP3/Ej1/: main.cpp
TP3/Ej2/: main.cpp
(+18 files in other folders)
